--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <div class="topmenu-item"><a href="./aboutapp.html">Nuestro Producto</a></div>
     <div class="topmenu-item user-profile">
       <span class="helper">
-        <a href="#"><img src="./img/user-portrait.jpeg" alt="Usuario" height="30" width="30"></a>
+        <a href="./profile.html"><img src="./img/user-portrait.jpeg" alt="Usuario" height="30" width="30"></a>
       </span>
     </div>
   </div>
@@ -51,8 +51,7 @@
     </div>
   </script>
 
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
   <script type="text/javascript" src="js/layout.js"></script>
 </body>
