--- a/public/books/createBook.html
+++ b/public/books/createBook.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Registrar Libro</title>
-        <link rel="stylesheet" href="../css/base.css">
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="../css/base.css">
     </head>
     <body>
         <form id = "bookForm">
@@ -12,9 +13,11 @@
                 <input type="text" id="txt_name">
             </div>
             <div>
-                <label for="txt_image">Imagen</label>
-                <input type="file" accept="image/png, image/jpeg" style="display:none" id="upload-file">
-                <button id="choose-button">Seleccionar Imagen</button>
+                <figure class="image_holder">
+                <img src="../img/book-placeholder.png" alt="select image" id="image_preview">
+                </figure>  
+                <button type="button" id="btnChooseImage" class="button_image">Subir imagen</button>
+            </div>
                 </div>
             <div>
                 <label for="slt_genre">Género</label>
@@ -90,6 +93,9 @@
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script> 
         
         <script src="../js/books/createBooks.js"></script>
-        </script>
+        <!-- Scripts cloudinary -->
+        <script src="../js/images.js"></script>
+        <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
+        <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     </body>
 </html>
