--- a/public/books/listBooks.html
+++ b/public/books/listBooks.html
@@ -3,20 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Lista de Libros</title>
+        <!--<link rel="stylesheet" href="../css/books/reset.css">-->
         <link rel="stylesheet" href="../css/base.css">
     </head>
     <body>
-
         <div class="search">
             <label for="search">Buscar libros:</label><br>
             <input type="text" id="txtSearch" name="txtSearch">
             <button id="btnSearch" class="button"><img src="../img/search.png" alt="Buscar"></button>
         </div>
-        <table id="tbl_books">
+        <table id = "tbl_books">
             <thead>
                 <tr>
                     <td>Nombre</td>
-                    <td>Imagen</td>
                     <td>Género</td>
                     <td>Autor</td>
                     <td>Descripción</td>
@@ -37,6 +36,10 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://kit.fontawesome.com/3f022aee91.js"></script>
         <script src="../js/books/listBooks.js"></script>
+        <!-- Scripts cloudinary -->
+        <script src="../js/images.js"></script>
+        <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
+        <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
 
     </body>
 </html>
