--- a/public/books/updateBook.html
+++ b/public/books/updateBook.html
@@ -6,14 +6,16 @@
         <link rel="stylesheet" href="../css/base.css">
     </head>
     <body>
-        <form>
+        <form id ="bookForm">
             <div>
                 <label for="txt_name">Nombre</label>
                 <input type="text" id="txt_name">
             </div>
             <div>
-                <label for="txt_image">Imagen</label>
-                <input type="text" id="txt_image">
+                <figure class="image_holder">
+                <img src="../img/book-placeholder.png" alt="select image" id="image_preview">
+                </figure>  
+                <button type="button" id="btnChooseImage" class="button_image">Subir imagen</button>
                 </div>
             <div>
                 <label for="slt_genre">Género</label>
@@ -80,7 +82,7 @@
                 <input type="number" id="txt_quantity">
             </div>
             <div>
-                <button type="button" id="btn_register">Registrar</button>
+                <button type="button" id="btn_update">Actualizar</button>
             </div>
 
         </form>
@@ -89,6 +91,10 @@
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script> 
         
         <script src="../js/books/updateBook.js"></script>
+        <!-- Scripts cloudinary -->
+        <script src="../js/images.js"></script>
+        <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
+        <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     </body>
 
 </html>
