--- a/public/books/viewBook.html
+++ b/public/books/viewBook.html
@@ -12,8 +12,9 @@
                 <span id="txt_name"></span>
             </div>
             <div>
-                <label for="txt_image">Imagen</label>
-                <span id="txt_image"></span>
+                <figure class="image_holder">
+                <img src="../img/book-placeholder.png" id="image_preview">
+                </figure>  
                 </div>
             <div>
                 <label for="slt_genre">Género</label>
@@ -62,5 +63,9 @@
         <script type="text/javascript" src="https://kit.fontawesome.com/3f022aee91.js"></script>
         
         <script src="../js/books/viewBook.js"></script>
+        <!-- Scripts cloudinary -->
+        <script src="../js/images.js"></script>
+        <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
+        <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     </body>
 </html>
