--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,14 @@
     <div class="topmenu-item"><a href="./aboutapp.html">Nuestro Producto</a></div>
     <div class="topmenu-item user-profile">
       <span class="helper">
-        <a href="./profile.html"><img src="./img/user-portrait.jpeg" alt="Usuario" height="30" width="30"></a>
+        <a id="user-profile-trigger">John Malkovich &nbsp; <img src="./img/user-portrait.jpeg" alt="Usuario" height="30" width="30"></a>
       </span>
+      <div id="profile-menu" style="display: none">
+        <ul>
+          <li><a href="./profile.html">Perfil</a></li>
+          <li><a href="./logout">Logout</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 
