Cambios en librerias

--- a/public/libraries/detail.html
+++ b/public/libraries/detail.html
@@ -1,67 +1,142 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Librerías</title>
-
+  <title>TitanDev - Home</title>
   <link rel="stylesheet" type="text/css" href="../css/base.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+  <script type="text/javascript" src="../js/OpenLayers.js"></script>
 </head>
 
 <body onload="loadLibrary()">
-  <div id="library">
-    <h1>${commercialName}</h1>
-
-    <div class="box-library">
-      <div>
-        <img src="../img/global-library-main_0_0-1.jpg" alt="Hotel foto">
-      </div>
-      <div>
-        <div>
-          <img src="../img/location.png" alt="Ubicacion">
-          <strong>Ubicacion: </strong> ${province}, ${county}, ${district}, ${address}
-        </div>
-        <div>
-          <img src="../img/building.png" alt="Sucursal" width="16" height="16"> 5 sucursales asociadas,
-          <img src="../img/clubs.png" alt="Sucursal" width="16" height="16"> 3 clubes de lectura registrados</div>
-        <div>
-          <img src="../img/user.png" alt="Usuario" width="16" height="16"> <strong>Propietario:
-          </strong>${admin[0].firstName} ${admin[0].middleName} ${admin[0].firstLastName} ${admin[0].secondLastName}
-        </div>
+  <div id="topmenu-container">
+    <div class="topmenu-item">
+      <span class="helper"><img src="../img/logo-white.png" alt="TitanDev Logo" width="30" height="30"></span>
+      <span class="helper"><img src="../img/titandev-text.png" alt="TitanDev Logo" width="118" height="18"></span>
+    </div>
+    <div class="topmenu-item"><a href="../about.html">Sobre nosotros</a></div>
+    <div class="topmenu-item"><a href="../aboutapp.html">Nuestro Producto</a></div>
+    <div class="topmenu-item user-profile">
+      <span class="helper">
+        <a id="user-profile-trigger">John Malkovich &nbsp; <img src="../img/user-portrait.jpeg" alt="Usuario"
+            height="30" width="30"></a>
+      </span>
+      <div id="profile-menu" style="display: none">
+        <ul>
+          <li><a href="../profile.html">Perfil</a></li>
+          <li><a href="../logout">Logout</a></li>
+        </ul>
       </div>
     </div>
   </div>
 
-  <script id="libraryTemplate" type="text/x-jQuery-tmpl">
-    <h1>${commercialName}</h1>
+  <div id="content-container">
+    <div id="leftmenu" class="left-menu-close">
+      <ul>
+        <li><a href="../index.html"><img src="../img/home.png" alt="Home"><span
+              class="left-menu-item-text hidden">Home</span></a></li>
+        <li><a href="../libraries/index.html"><img src="../img/library.png" alt="Librerias"><span
+              class="left-menu-item-text hidden">Librerías</span></a></li>
+        <li><a href="../books/listBooks.html"><img src="../img/book.png" alt="Libros"><span
+              class="left-menu-item-text hidden">Libros</span></a></li>
+        <li><a href="../authors/authorsList.html"><img src="../img/author.png" alt="Autores"><span
+              class="left-menu-item-text hidden">Autores</span></a></li>
+        <li><a href="../clubs/listClubs.html"><img src="../img/clubs.png" alt="Clubes de lectura"><span
+              class="left-menu-item-text hidden">Clubes de lectura</span></a></li>
+        <li><a href="../Genre/index.html"><img src="../img/genre.png" alt="Genero"><span
+              class="left-menu-item-text hidden">Generos</span></a></li>
+        <li><a href="../users/register.html"><img src="../img/user.png" alt="Usuario"><span
+              class="left-menu-item-text hidden">Usuario</span></a></li>
+      </ul>
+    </div>
 
-    <div class="box-library">
-      <div>
-        <img src="../img/global-library-main_0_0-1.jpg" alt="Hotel foto">
-      </div>
-      <div>
-        <div>
-          <img src="../img/location.png" alt="Ubicacion">
-          <strong>Ubicacion: </strong> ${province}, ${county}, ${district}, ${address}
+    <div id="content">
+      <div id="library">
+        <h1>${commercialName}</h1>
+
+        <h3>Ubicación</h3>
+        <div class="row">
+          <div class="col-12 box">
+            <p>
+              <img src="../img/location.png" alt="Ubicacion"> ${province}, ${county}, ${district}, ${address}
+            </p>
+            <div id="map"></div>
+          </div>
         </div>
-        <div>
-          <img src="../img/building.png" alt="Sucursal" width="16" height="16"> 5 sucursales asociadas,
-          <img src="../img/clubs.png" alt="Sucursal" width="16" height="16"> 3 clubes de lectura registrados</div>
-        <div>
-          <img src="../img/user.png" alt="Usuario" width="16" height="16"> <strong>Propietario:
-          </strong>${admin[0].firstName} ${admin[0].middleName} ${admin[0].firstLastName} ${admin[0].secondLastName}
+
+        <div class="row">
+          <div class="user-box">
+            <div class="user-box-top"></div>
+            <div class="user-box-bottom">
+              <img src="../img/user-portrait.jpeg" alt="Usuario" width="100" height="100"><br>
+              <h4>${admin[0].firstName} ${admin[0].middleName} ${admin[0].firstLastName} ${admin[0].secondLastName}</h4>
+              <p>Propietario</p>
+              <p><strong>Email:</strong> ${admin[0].email}</p>
+            </div>
+
+          </div>
+
+          <div class="box">
+            Sucursales
+          </div>
+          <div class="box">
+              Clubes de lectura
+          </div>
+          <div>
+            <img src="../img/global-library-main_0_0-1.jpg" alt="Hotel foto" class="image" width="500">
+          </div>
         </div>
       </div>
     </div>
+
+    <script id="libraryTemplate" type="text/x-jQuery-tmpl">
+      <h1>${commercialName}</h1>
+
+        <h3>Ubicación</h3>
+        <div class="row">
+          <div class="col-12 box">
+            <p>
+              <img src="../img/location.png" alt="Ubicacion"> ${province}, ${county}, ${district}, ${address}
+            </p>
+            <div id="map"></div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="user-box">
+            <div class="user-box-top"></div>
+            <div class="user-box-bottom">
+              <img src="../img/user-portrait.jpeg" alt="Usuario" width="100" height="100"><br>
+              <h4>${admin[0].firstName} ${admin[0].middleName} ${admin[0].firstLastName} ${admin[0].secondLastName}</h4>
+              <p>Propietario</p>
+              <p><strong>Email:</strong> ${admin[0].email}</p>
+            </div>
+
+          </div>
+
+          <div class="box">
+            Sucursales
+          </div>
+          <div class="box">
+              Clubes de lectura
+          </div>
+          <div>
+            <img src="../img/global-library-main_0_0-1.jpg" alt="Hotel foto" class="image" width="500">
+          </div>
+        </div>
+      </div>
+    </script>
+  </div>
+
+  <script>
+      map = new OpenLayers.Map("map");
+      map.addLayer(new OpenLayers.Layer.OSM());
+      map.zoomToMaxExtent();
   </script>
 
-  <script id="emptylibraryTemplate" type="text/x-jQuery-tmpl">
-    <div id="emptyLibraries">No hay librerias registradas actualmente</div>
-  </script>
-
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
+  <script type="text/javascript" src="../js/layout.js"></script>
   <script type="text/javascript" src="../js/libraries.js"></script>
 </body>
 
