--- a/public/libraries/add.html
+++ b/public/libraries/add.html
@@ -59,7 +59,7 @@
         <ul></ul>
       </div>
 
-      <form name="frmAddUser" id="frmAddUser" method="POST" class="form" enctype="multipart/form-data">
+      <form name="frmAddUser" id="frmAddUser" method="POST" class="form">
         <fieldset>
           <legend>Datos generales:</legend>
 
@@ -100,8 +100,11 @@
               <input type="text" name="location" id="location" class="required">
             </div>
             <div class="col-6">
-              <label for="image">Imagen (Formatos permitidos: gif, jpg, jpeg, bmp, png, webp)</label>
-              <input type="file" name="image" id="image" accept=".jpg, .png, .jpeg, .gif, .bmp, .webp,|image/*">
+              <label for="image">Imagen</label><br>
+              <button type="button" id="btnChooseImage" class="button_image">Subir imagen</button>
+              <figure class="image_holder">
+                <img src="../img/image-default.png" alt="select image" id="image_preview" width="200" height="100">
+              </figure>  
             </div>
           </div>
         </fieldset>
@@ -182,15 +185,18 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
-  <script type="text/javascript" src="../js/layout.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+  
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js"></script>
+  <script type="text/javascript" src="https://widget.cloudinary.com/global/all.js"></script>
+  <script type="text/javascript" src="../js/images.js"></script>
+  
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+  
+  <script type="text/javascript" src="../js/layout.js"></script>
   <script type="text/javascript" src="../js/libraries.js"></script>
   <script type="text/javascript" src="../js/provinces.js"></script>
 </body>
-
 </html>
