--- a/public/users/signin.html
+++ b/public/users/signin.html
@@ -25,7 +25,13 @@
           <label for="passPassword">Contraseña</label><br><br>
           <input type="password" id="passPassword">
         </div>
-      </div>
+        <button type="button" id="btnSignIn">Iniciar Sesión</button>
+    </form>
+    <a href="/users/register.html">Registrar nueva cuenta</a>
+</body>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="../js/users/signin.js"></script>
 
       <p class="center"><button type="button" class="button-primary" id="btnSignIn">Iniciar Sesión</button></p><br>
       <p class="center"><a href="./register.html">¿No eres usuario aún? Regístrate acá</a></p>
