--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
         <li><a href="./authors/authorsList.html"><img src="./img/author.png" alt="Autores"><span class="left-menu-item-text hidden">Autores</span></a></li>
         <li><a href="./clubs/listClubs.html"><img src="./img/clubs.png" alt="Clubes de lectura"><span class="left-menu-item-text hidden">Clubes de lectura</span></a></li>
         <li><a href="./Genre/index.html"><img src="./img/genre.png" alt="Genero"><span class="left-menu-item-text hidden">Generos</span></a></li>
-        <li><a href="./users/register.html"><img src="./img/user.png" alt="Usuario"><span class="left-menu-item-text hidden">Usuario</span></a></li>
+        <li><a href="./users/profile.html"><img src="./img/user.png" alt="Usuario"><span class="left-menu-item-text hidden">Usuario</span></a></li>
       </ul>
     </div>
 
