--- a/public/users/register.html
+++ b/public/users/register.html
@@ -126,8 +126,10 @@
               </div>
               <div class="row">
                 <div class="col-4">
-                  <label for="txtFavoriteBook">Libro favorito</label>
-                  <input type="text" id="txtFavoriteBook">
+                  <div class="autocomplete">
+                    <label for="txtFavoriteBook">Libro favorito</label>
+                    <input type="text" id="txtFavoriteBook">
+                </div>
                 </div>
                 <div class="col-4">
                   <div class="autocomplete">
