--- a/public/books/viewBook.html
+++ b/public/books/viewBook.html
@@ -21,7 +21,7 @@
         <div id="profile-menu" style="display: none">
             <ul>
                 <li><a href="../profile.html">Perfil</a></li>
-                <li><a href="../logout">Logout</a></li>
+                <li><a href="../users/logout.html">Logout</a></li>
             </ul>
         </div>
     </div>
